# ReliaGuard-Studio

./: .env.example  .gitignore  CITATION.cff  Makefile  README.md  RELEASE_CHECKLIST.md  environment.yml  pyproject.toml  run_app.bat  run_app.ps1
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  main.py
apps/web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: nav.tsx  ui.tsx
apps/web/lib/: api.ts  format.ts
docs/: GITHUB_SETUP.md  README.md  USAGE_GUIDE.md  architecture.md  deployment.md  guardrail_api.md  integrations_and_quality_gates.md  quickstart_audit_logs.md
docs/examples/: customer_support_copilot_logs.csv
docs/model_cards/: reliaguard_ns.md
docs/portfolio/: README.md
docs/project_explanation/: ReliaGuard_Studio_Project_Explanation.tex
docs/project_summary/: project_summary.tex
experiments/: README.md  generate_assets.py  run_air_bench.py
infra/: README.md  docker-compose.yml
scripts/: capture_readme_screenshots.mjs  make_nmi_submission.py
sdks/python/: README.md  pyproject.toml
sdks/python/reliaguard/: __init__.py
sdks/typescript/: README.md  package-lock.json  package.json
sdks/typescript/src/: index.ts
src/reliaguard_studio/: __init__.py  cli.py  paths.py  utils.py
src/reliaguard_studio/api/: main.py  platform.py  product.py
src/reliaguard_studio/config/: default_config.yaml  loader.py  schemas.py
src/reliaguard_studio/data/: __init__.py  benchmark.py  dataset_screening.py  real_schema.py  simulation.py  storage.py
src/reliaguard_studio/evaluation/: __init__.py  alpha_sensitivity.py  (+39 more)
tests/: conftest.py  test_config.py  test_end_to_end.py  test_figures.py  test_leakage_audit.py  test_metrics.py  test_models.py  test_negative_controls.py  test_paper_smoke.py  test_policy_and_statistics.py  test_product_api.py  test_prospective_no_false_claims.py  test_real_data_pipeline.py  test_reliaguard_and_study.py  test_rules.py  test_theory_and_sensitivity.py
(+82 files in other folders)
