[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliaguard"
version = "0.1.0"
description = "Python SDK for streaming human-AI decision events into ReliaGuard Studio."
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]
authors = [{name = "Ahan Bhatt"}]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
